Phase 2: Article AI analysis + security documentation
- Add --ai flag to article command for AI analysis
- Update default model to grok-4 for article fetching
- Add ai_prompt parameter to MCP xint_article tool
- Add comprehensive Security Considerations to SKILL.md
- Update README with article section and expanded security notes

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
-# X API Bearer Token (required for most commands)
-X_BEARER_TOKEN=
+# Required: X API Bearer Token (get from https://developer.x.com)
+X_BEARER_TOKEN=your-bearer-token-here
 
-# X API Client ID (required for OAuth commands: bookmarks, likes, following, diff)
-X_CLIENT_ID=
+# Optional: OAuth 2.0 Client ID (needed for bookmarks, likes, following)
+# Get from X Developer Portal > App Settings > User authentication settings
+X_CLIENT_ID=your-client-id-here
 
-# xAI API Key (required for: analyze, report --sentiment, x-search, collections upload/search)
-XAI_API_KEY=
+# Optional: xAI API Key (needed for Grok AI analysis, x_search, collections search)
+# Get from https://console.x.ai
+XAI_API_KEY=your-xai-api-key-here
 
-# xAI Management API Key (required for: collections list/create/ensure/add-document)
-XAI_MANAGEMENT_API_KEY=
+# Optional: xAI Management API Key (needed for collections management)
+# Get from https://console.x.ai (same account, different key)
+XAI_MANAGEMENT_API_KEY=your-xai-management-api-key-here
