--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,16 @@ XAI_API_KEY=your-xai-api-key-here
 # Optional: xAI Management API Key (needed for collections management)
 # Get from https://console.x.ai (same account, different key)
 XAI_MANAGEMENT_API_KEY=your-xai-management-api-key-here
+
+# Optional: Package API base URL (for Agent Memory package MCP tools)
+# Local dev example:
+XINT_PACKAGE_API_BASE_URL=http://localhost:8080/v1
+
+# Optional: Bearer key for package API (if local server enforces auth)
+XINT_PACKAGE_API_KEY=your-local-package-api-key
+
+# Optional: MCP SSE bind host (defaults to 127.0.0.1)
+XINT_MCP_HOST=127.0.0.1
+
+# Optional: MCP SSE bearer auth token for /mcp and /sse endpoints
+XINT_MCP_AUTH_TOKEN=your-mcp-auth-token
