feat(monetization): scope package API workspace in mcp

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,12 @@ XINT_PACKAGE_API_BASE_URL=http://localhost:8080/v1
 # Optional: Bearer key for package API (if local server enforces auth)
 XINT_PACKAGE_API_KEY=your-local-package-api-key
 
+# Optional: Workspace selector for package API + MCP package tools
+XINT_WORKSPACE_ID=ws_local
+
+# Optional: Upgrade URL included in MCP monetization error messages
+XINT_BILLING_UPGRADE_URL=https://xint.dev/pricing
+
 # Optional: MCP SSE bind host (defaults to 127.0.0.1)
 XINT_MCP_HOST=127.0.0.1
 
